--- a/C/index.html
+++ b/C/index.html
@@ -4,4 +4,4 @@
       src="https://portmonetv.github.io/simplebot2/C/data/random.js"
     ></script> 
      
-      Отходы лиственницы улучшили выживаемость форели   https://tinyurl.com/ZyoCHKCNgCFEfMsu   
+      В Мариуполе «КИА» врезался в троллейбус, — ФОТО — Новости 29 августа   https://tinyurl.com/xqSXDxriRWXEZoqw   
