--- a/C/index.html
+++ b/C/index.html
@@ -4,4 +4,4 @@
       src="https://portmonetv.github.io/simplebot2/C/data/random.js"
     ></script> 
      
-      В Мариуполе «КИА» врезался в троллейбус, — ФОТО — Новости 29 августа   https://tinyurl.com/xqSXDxriRWXEZoqw   
+      Политический век Лукашенко фактически закончился   https://tinyurl.com/iz6wXdp9fbeQDCxY   
