--- a/C/index.html
+++ b/C/index.html
@@ -4,4 +4,4 @@
       src="https://portmonetv.github.io/simplebot2/C/data/random.js"
     ></script> 
      
-      Политический век Лукашенко фактически закончился   https://tinyurl.com/iz6wXdp9fbeQDCxY   
+      Илон Маск успешно вживил чипы в мозг поросятам. Следующим будет   https://tinyurl.com/5NpMJY3z5SWFL4YE   
