--- a/C/index.html
+++ b/C/index.html
@@ -4,4 +4,4 @@
       src="https://portmonetv.github.io/simplebot2/C/data/random.js"
     ></script> 
      
-      Илон Маск успешно вживил чипы в мозг поросятам. Следующим будет   https://tinyurl.com/5NpMJY3z5SWFL4YE   
+      Новости 29 мая: Обыски в «Нацкорпусе» и кто устроил разборки в Броварах   boMSVSzorT7FhFdb   
