--- a/C/index.html
+++ b/C/index.html
@@ -4,4 +4,4 @@
       src="https://portmonetv.github.io/simplebot2/C/data/random.js"
     ></script> 
      
-      Новости 29 мая: Обыски в «Нацкорпусе» и кто устроил разборки в Броварах   boMSVSzorT7FhFdb   
+      Все тарифы на коммуналку в г.Каменское за август   https://tinyurl.com/Nvbd4SrdYzjFsW9A   
