--- a/C/index.html
+++ b/C/index.html
@@ -4,4 +4,4 @@
       src="https://portmonetv.github.io/simplebot2/C/data/random.js"
     ></script> 
      
-      Все тарифы на коммуналку в г.Каменское за август   https://tinyurl.com/Nvbd4SrdYzjFsW9A   
+      7 отличных сериалов об ужасах тихих провинциальных городков | Кино   https://tinyurl.com/7e661p3KGoiFniQh   
