--- a/C/index.html
+++ b/C/index.html
@@ -4,4 +4,4 @@
       src="https://portmonetv.github.io/simplebot2/C/data/random.js"
     ></script> 
      
-      7 отличных сериалов об ужасах тихих провинциальных городков | Кино   https://tinyurl.com/7e661p3KGoiFniQh   
+      Виктор Бабарико и Мария Колесникова объявили о создании новой партии в   https://tinyurl.com/3QWFhuzgyuDN6e5W   
