--- a/C/index.html
+++ b/C/index.html
@@ -4,4 +4,4 @@
       src="https://portmonetv.github.io/simplebot2/C/data/random.js"
     ></script> 
      
-      Виктор Бабарико и Мария Колесникова объявили о создании новой партии в   https://tinyurl.com/3QWFhuzgyuDN6e5W   
+      Айсен Николаев рассмотрел ход реализации в республике нацпроектов   https://tinyurl.com/D6QR79Np3yKciv34   
