--- a/C/index.html
+++ b/C/index.html
@@ -4,4 +4,4 @@
       src="https://portmonetv.github.io/simplebot2/C/data/random.js"
     ></script> 
      
-      Айсен Николаев рассмотрел ход реализации в республике нацпроектов   https://tinyurl.com/D6QR79Np3yKciv34   
+      Из металлорганических каркасов создали настраиваемые мембраны   https://tinyurl.com/DFK5yFnvH9WWZELv   
