--- a/C/index.html
+++ b/C/index.html
@@ -4,4 +4,4 @@
       src="https://portmonetv.github.io/simplebot2/C/data/random.js"
     ></script> 
      
-      Из металлорганических каркасов создали настраиваемые мембраны   https://tinyurl.com/DFK5yFnvH9WWZELv   
+      С 1 сентября в Иваново стартует акция Сбербанка и Mastercard «С Masterсard   https://tinyurl.com/Pp6uFLSEe99rSvpy   
