--- a/C/index.html
+++ b/C/index.html
@@ -4,4 +4,4 @@
       src="https://portmonetv.github.io/simplebot2/C/data/random.js"
     ></script> 
      
-      С 1 сентября в Иваново стартует акция Сбербанка и Mastercard «С Masterсard   https://tinyurl.com/Pp6uFLSEe99rSvpy   
+      Немецкая библиотека после 372 лет ожидания приобрела альбом с   https://tinyurl.com/d9HpDAn9R4oNX5xt   
