--- a/C/index.html
+++ b/C/index.html
@@ -4,4 +4,4 @@
       src="https://portmonetv.github.io/simplebot2/C/data/random.js"
     ></script> 
      
-      Немецкая библиотека после 372 лет ожидания приобрела альбом с   https://tinyurl.com/d9HpDAn9R4oNX5xt   
+      В Армении стартовал конкурс к юбилею атомной отрасли — «Технологии,   https://tinyurl.com/fUfA6UEbk9RCiV6i   
