--- a/C/index.html
+++ b/C/index.html
@@ -4,4 +4,4 @@
       src="https://portmonetv.github.io/simplebot2/C/data/random.js"
     ></script> 
      
-      В Армении стартовал конкурс к юбилею атомной отрасли — «Технологии,   https://tinyurl.com/fUfA6UEbk9RCiV6i   
+      Mobile-review.com Galaxy Z Fold2,   https://tinyurl.com/dCY3UPHt5cRkY2PA   
