--- a/C/index.html
+++ b/C/index.html
@@ -4,4 +4,4 @@
       src="https://portmonetv.github.io/simplebot2/C/data/random.js"
     ></script> 
      
-      Новости Крымнаша. Не ставьте на нас точку | 1K   https://tinyurl.com/2t6br6ANFF2SdR22   
+      «Физический эксперимент с культурными исследованиями»   https://tinyurl.com/3MRSc1zq99uUUt5w   
