--- a/C/index.html
+++ b/C/index.html
@@ -4,4 +4,4 @@
       src="https://portmonetv.github.io/simplebot2/C/data/random.js"
     ></script> 
      
-      «Физический эксперимент с культурными исследованиями»   https://tinyurl.com/3MRSc1zq99uUUt5w   
+      Самое главное – здоровье детей — Новости   https://tinyurl.com/2JxjGgMSCW5kKtcL   
