--- a/C/index.html
+++ b/C/index.html
@@ -4,4 +4,4 @@
       src="https://portmonetv.github.io/simplebot2/C/data/random.js"
     ></script> 
      
-      Самое главное – здоровье детей — Новости   https://tinyurl.com/2JxjGgMSCW5kKtcL   
+      Русатом Карго (международная цифровая платформа логистического сервиса   fn7KvAtLzurPuUyZ   
