--- a/C/index.html
+++ b/C/index.html
@@ -4,4 +4,4 @@
       src="https://portmonetv.github.io/simplebot2/C/data/random.js"
     ></script> 
      
-      Русатом Карго (международная цифровая платформа логистического сервиса   fn7KvAtLzurPuUyZ   
+      Томский кластер высокотехнологичного производства беспилотных   https://tinyurl.com/buhafToZFPgqaQ7D   
