--- a/C/index.html
+++ b/C/index.html
@@ -4,4 +4,4 @@
       src="https://portmonetv.github.io/simplebot2/C/data/random.js"
     ></script> 
      
-      Томский кластер высокотехнологичного производства беспилотных   RDxK331hLM2dy9Ws   
+      Российский стартап помогает продавать Sharp в Европе   https://tinyurl.com/aodPj73ptKbF9yiL   
