--- a/C/index.html
+++ b/C/index.html
@@ -4,4 +4,4 @@
       src="https://portmonetv.github.io/simplebot2/C/data/random.js"
     ></script> 
      
-      Темная история. 11 фундаментальных вопросов о самой неуловимой материи   2Mc2GgS5d2kEStMq   
+      Мост преткновения? — Мир новостей   https://tinyurl.com/CperPsYc7iYRr5Ne   
