--- a/C/index.html
+++ b/C/index.html
@@ -4,4 +4,4 @@
       src="https://portmonetv.github.io/simplebot2/C/data/random.js"
     ></script> 
      
-      Мост преткновения? — Мир новостей   https://tinyurl.com/CperPsYc7iYRr5Ne   
+      3 основных этапа старения, когда происходят необратимые изменения   https://tinyurl.com/FALnF9GzssWTCknG   
