--- a/C/index.html
+++ b/C/index.html
@@ -4,4 +4,4 @@
       src="https://portmonetv.github.io/simplebot2/C/data/random.js"
     ></script> 
      
-      3 основных этапа старения, когда происходят необратимые изменения   https://tinyurl.com/FALnF9GzssWTCknG   
+      Витамин B1 помог справиться с раком легкого   https://tinyurl.com/NEXgrkyTChXPQkCQ   
